--- a/Application/LaunchScreen.storyboard
+++ b/Application/LaunchScreen.storyboard
@@ -22,13 +22,13 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="更快、更大、更安全" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uCn-gS-Hna">
                                 <rect key="frame" x="115.5" y="458" width="183.5" height="24"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle3"/>
-                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="提供 IPv6 支持" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sFL-7g-F24">
-                                <rect key="frame" x="157" y="844" width="100" height="18"/>
+                                <rect key="frame" x="157" y="794" width="100" height="18"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleSubhead"/>
-                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchIcon" translatesAutoresizingMaskIntoConstraints="NO" id="S2B-Xm-mx5">
@@ -42,7 +42,7 @@
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="uCn-gS-Hna" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="10" id="LHE-18-hr5"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="sFL-7g-F24" secondAttribute="bottom" id="R9p-Mc-fxL"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="sFL-7g-F24" secondAttribute="bottom" constant="50" id="R9p-Mc-fxL"/>
                             <constraint firstAttribute="centerY" secondItem="S2B-Xm-mx5" secondAttribute="bottom" constant="10" id="X7z-Ot-XiD"/>
                             <constraint firstItem="uCn-gS-Hna" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="mBZ-Kc-aAT"/>
                             <constraint firstItem="S2B-Xm-mx5" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="uzn-PY-Col"/>
