--- a/Application/Main.storyboard
+++ b/Application/Main.storyboard
@@ -194,70 +194,15 @@
                                     <outlet property="TrailingMargin" destination="59S-Bw-Jk3" id="name-outlet-59S-Bw-Jk3"/>
                                 </connections>
                             </tableViewCell>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewFileEntry" rowHeight="60" id="akK-uZ-8ao" customClass="FileEntryCell">
-                                <rect key="frame" x="0.0" y="186" width="414" height="60"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="akK-uZ-8ao" id="Cgn-A2-Xy3">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="yxc-z8-93H">
-                                            <rect key="frame" x="16" y="11" width="38" height="38"/>
-                                            <constraints>
-                                                <constraint firstAttribute="width" constant="38" id="RI7-WY-mmM"/>
-                                                <constraint firstAttribute="height" constant="38" id="sh7-Bb-qQs"/>
-                                            </constraints>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File Name" textAlignment="natural" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nbm-B5-nnG">
-                                            <rect key="frame" x="64" y="11" width="76" height="19"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="File Type" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vdS-ch-MGM">
-                                            <rect key="frame" x="64" y="32" width="76" height="17"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="888.88 MB" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T8l-JB-G6S">
-                                            <rect key="frame" x="160" y="21" width="238" height="18"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="vdS-ch-MGM" firstAttribute="leading" secondItem="yxc-z8-93H" secondAttribute="trailing" constant="10" id="89l-cl-t6r"/>
-                                        <constraint firstItem="T8l-JB-G6S" firstAttribute="leading" secondItem="nbm-B5-nnG" secondAttribute="trailing" constant="20" id="AJD-bs-maP"/>
-                                        <constraint firstItem="yxc-z8-93H" firstAttribute="centerY" secondItem="Cgn-A2-Xy3" secondAttribute="centerY" id="FiZ-nh-Tts"/>
-                                        <constraint firstItem="T8l-JB-G6S" firstAttribute="centerY" secondItem="Cgn-A2-Xy3" secondAttribute="centerY" id="Vd9-Nx-RhR"/>
-                                        <constraint firstItem="yxc-z8-93H" firstAttribute="leading" secondItem="Cgn-A2-Xy3" secondAttribute="leading" constant="16" id="Xre-7l-KiH"/>
-                                        <constraint firstItem="vdS-ch-MGM" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Cgn-A2-Xy3" secondAttribute="centerYWithinMargins" id="Ygm-Cw-VP7"/>
-                                        <constraint firstItem="vdS-ch-MGM" firstAttribute="bottom" secondItem="Cgn-A2-Xy3" secondAttribute="bottomMargin" id="fUO-zS-3jZ"/>
-                                        <constraint firstAttribute="centerYWithinMargins" relation="greaterThanOrEqual" secondItem="nbm-B5-nnG" secondAttribute="bottom" id="gQZ-sy-dbP"/>
-                                        <constraint firstItem="nbm-B5-nnG" firstAttribute="leading" secondItem="yxc-z8-93H" secondAttribute="trailing" constant="10" id="oS5-aq-vva"/>
-                                        <constraint firstItem="T8l-JB-G6S" firstAttribute="leading" secondItem="vdS-ch-MGM" secondAttribute="trailing" constant="20" id="pHf-G9-gey"/>
-                                        <constraint firstAttribute="trailing" secondItem="T8l-JB-G6S" secondAttribute="trailing" constant="16" id="sdG-Nw-mjS"/>
-                                        <constraint firstItem="nbm-B5-nnG" firstAttribute="top" secondItem="Cgn-A2-Xy3" secondAttribute="topMargin" id="sou-tm-CBr"/>
-                                    </constraints>
-                                </tableViewCellContentView>
-                                <connections>
-                                    <outlet property="IconImage" destination="yxc-z8-93H" id="1CQ-lp-4jh"/>
-                                    <outlet property="LeadingMargin" destination="Xre-7l-KiH" id="5kC-mp-sH2"/>
-                                    <outlet property="NameLabel" destination="nbm-B5-nnG" id="o4G-sg-IXN"/>
-                                    <outlet property="SizeLabel" destination="T8l-JB-G6S" id="Pqk-71-wep"/>
-                                    <outlet property="TrailingMargin" destination="sdG-Nw-mjS" id="qGB-V3-YJS"/>
-                                    <outlet property="TypeLabel" destination="vdS-ch-MGM" id="bD9-28-Y3V"/>
-                                </connections>
-                            </tableViewCell>
                         </prototypes>
                         <connections>
                             <outlet property="dataSource" destination="V6p-Ak-mQh" id="wxi-o4-Tzc"/>
                             <outlet property="delegate" destination="V6p-Ak-mQh" id="RKy-Ab-VcU"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="相册备份" id="dHr-iR-5Jr"/>
+                    <navigationItem key="navigationItem" title="相册备份" id="dHr-iR-5Jr">
+                        <barButtonItem key="leftBarButtonItem" image="Help" id="Plg-fQ-SyH"/>
+                    </navigationItem>
                     <connections>
                         <segue destination="Jad-wd-pkW" kind="presentation" identifier="ChooseBackupPath" modalPresentationStyle="fullScreen" id="xIO-Ow-EXP"/>
                         <segue destination="9vd-nE-gc6" kind="show" identifier="ViewPhotos" id="oSk-Zx-nZg"/>
@@ -1115,7 +1060,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="本地收藏" id="DIg-4k-bnV">
-                        <barButtonItem key="leftBarButtonItem" title="帮助" id="XXS-59-2a8"/>
+                        <barButtonItem key="leftBarButtonItem" image="Help" id="XXS-59-2a8"/>
                         <rightBarButtonItems>
                             <barButtonItem image="ImportDocument" id="xNm-xN-bOF"/>
                             <barButtonItem image="NewFolder" id="oq0-xt-GLw"/>
@@ -1414,9 +1359,10 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="B9D-Lm-pXQ"/>
+        <segue reference="xIO-Ow-EXP"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="Help" width="24" height="24"/>
         <image name="ImportDocument" width="24" height="24"/>
         <image name="NavCloud" width="24" height="16"/>
         <image name="NavGear" width="24" height="24"/>
