--- a/Application/Resources/Base.lproj/Main.storyboard
+++ b/Application/Resources/Base.lproj/Main.storyboard
@@ -1298,7 +1298,7 @@ Personal Cloud</string>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
-                            <tableViewSection headerTitle="Online Storage" id="urr-49-xf2">
+                            <tableViewSection headerTitle="Cloud Storage" id="urr-49-xf2">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" rowHeight="50" id="GVw-a4-Qjb">
                                         <rect key="frame" x="0.0" y="55.5" width="414" height="50"/>
@@ -1427,7 +1427,7 @@ Personal Cloud</string>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Using Connection String" id="VpU-lG-XcX">
+                            <tableViewSection headerTitle="Use Connection String" id="VpU-lG-XcX">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="default" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="MUv-RZ-7L1" style="IBUITableViewCellStyleDefault" id="dQT-NE-PLq">
                                         <rect key="frame" x="0.0" y="117.5" width="414" height="44"/>
@@ -1708,7 +1708,7 @@ Personal Cloud</string>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection headerTitle="Using Connection String" id="s8Y-qi-nvL">
+                            <tableViewSection headerTitle="Use Connection String" id="s8Y-qi-nvL">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="hxL-4I-CMZ" style="IBUITableViewCellStyleDefault" id="M0T-RF-rAg">
                                         <rect key="frame" x="0.0" y="116.5" width="414" height="43.5"/>
